--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "moment": "^2.24.0",
     "mongoose": "^5.8.4",
     "multer": "^1.4.2",
+    "node-sass": "^4.13.0",
     "nuxt": "^2.0.0",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "sass-loader": "^8.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
