--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
+    "axios": "^0.19.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "cross-env": "^5.2.0",
